--- a/benchmark/type/find_if/meta.list.cpp.erb
+++ b/benchmark/type/find_if/meta.list.cpp.erb
@@ -4,8 +4,7 @@
 
 #include <meta/meta.hpp>
 
-struct is_last
-{
+struct is_last {
     template<typename N>
     using invoke = meta::bool_<N::type::value == <%= n %>>;
 };
