--- a/benchmark/type/transform/hana.types.cpp.erb
+++ b/benchmark/type/transform/hana.types.cpp.erb
@@ -7,12 +7,12 @@
 #include <boost/hana/type.hpp>
 namespace hana = boost::hana;
 
+template<typename>
+struct f {
+    struct type;
+};
 
-template <typename>
-struct f { struct type; };
-
-template <int> struct x;
-
+template<int> struct x;
 
 int main() {
     constexpr auto xs = hana::experimental::types<
