--- a/benchmark/type/count_if/mpl.list.cpp.erb
+++ b/benchmark/type/count_if/mpl.list.cpp.erb
@@ -7,25 +7,23 @@
     #define BOOST_MPL_LIMIT_LIST_SIZE <%= ((n + 9) / 10) * 10 %>
 <% end %>
 
-#include <boost/mpl/count_if.hpp>
 #include <boost/mpl/list.hpp>
-#include <boost/mpl/quote.hpp>
-
-#include <type_traits>
+#include <boost/mpl/count_if.hpp>
+#include <boost/mpl/bool.hpp>
+#include <boost/mpl/int.hpp>
 namespace mpl = boost::mpl;
 
-
-template <typename N>
-struct is_even
-    : std::integral_constant<bool, N::type::value % 2 == 0>
-{ };
+struct is_even {
+    template<typename N>
+    using apply = mpl::bool_<N::type::value % 2 == 0>;
+};
 
 using list = mpl::list<
-    <%= (1..n).map { |i| "std::integral_constant<int, #{i}>" }.join(', ') %>
+    <%= (1..n).map { |i| "mpl::int_<#{i}>" }.join(', ') %>
 >;
 
 #if defined(METABENCH)
-using result = mpl::count_if<list, mpl::quote1<is_even>>::type;
+using result = mpl::count_if<list, is_even>::type;
 #endif
 
 int main() { }
