--- a/benchmark/type/filter/mpl.list.cpp.erb
+++ b/benchmark/type/filter/mpl.list.cpp.erb
@@ -7,25 +7,23 @@
     #define BOOST_MPL_LIMIT_LIST_SIZE <%= ((n + 9) / 10) * 10 %>
 <% end %>
 
-#include <boost/mpl/copy_if.hpp>
 #include <boost/mpl/list.hpp>
-
-#include <type_traits>
+#include <boost/mpl/copy_if.hpp>
+#include <boost/mpl/bool.hpp>
+#include <boost/mpl/int.hpp>
 namespace mpl = boost::mpl;
 
-
 struct is_even {
-    template <typename N>
-    using apply = std::integral_constant<bool, N::type::value % 2 == 0>;
+    template<typename N>
+    using apply = mpl::bool_<N::type::value % 2 == 0>;
 };
 
 using list = mpl::list<
-    <%= (1..n).map { |i| "std::integral_constant<int, #{i}>" }.join(', ') %>
+    <%= (1..n).map { |i| "mpl::int_<#{i}>" }.join(', ') %>
 >;
 
 #if defined(METABENCH)
 using result = mpl::copy_if<list, is_even>::type;
 #endif
-
 
 int main() { }
