--- a/benchmark/type/find_if/mpl.vector.cpp.erb
+++ b/benchmark/type/find_if/mpl.vector.cpp.erb
@@ -7,22 +7,19 @@
     #define BOOST_MPL_LIMIT_VECTOR_SIZE <%= ((n + 9) / 10) * 10 %>
 <% end %>
 
-#include <boost/mpl/find_if.hpp>
 #include <boost/mpl/vector.hpp>
-
-#include <type_traits>
+#include <boost/mpl/find_if.hpp>
+#include <boost/mpl/bool.hpp>
+#include <boost/mpl/int.hpp>
 namespace mpl = boost::mpl;
 
-
 struct is_last {
-    template <typename N>
-    struct apply
-        : std::integral_constant<bool, N::type::value == <%= n %>>
-    { };
+    template<typename N>
+    using apply = mpl::bool_<N::type::value == <%= n %>>;
 };
 
 using vector = mpl::vector<
-    <%= (1..n).map { |i| "std::integral_constant<int, #{i}>" }.join(', ') %>
+    <%= (1..n).map { |i| "mpl::int_<#{i}>" }.join(', ') %>
 >;
 
 #if defined(METABENCH)
