--- a/benchmark/type/fold_left/mpl.list.cpp.erb
+++ b/benchmark/type/fold_left/mpl.list.cpp.erb
@@ -7,22 +7,20 @@
     #define BOOST_MPL_LIMIT_LIST_SIZE <%= ((n + 9) / 10) * 10 %>
 <% end %>
 
-#include <boost/mpl/fold.hpp>
 #include <boost/mpl/list.hpp>
+#include <boost/mpl/fold.hpp>
 namespace mpl = boost::mpl;
 
-
 struct f {
-    template <typename State, typename X>
+    template<typename, typename X>
     struct apply {
         using type = X;
     };
 };
 
-struct state { };
+struct state;
 
-template <int i>
-struct x { };
+template<int> struct x;
 
 using list = mpl::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
@@ -31,6 +29,5 @@ using list = mpl::list<
 #if defined(METABENCH)
 using result = mpl::fold<list, state, f>::type;
 #endif
-
 
 int main() { }
