--- a/benchmark/type/fold_right/mpl.vector.cpp.erb
+++ b/benchmark/type/fold_right/mpl.vector.cpp.erb
@@ -7,20 +7,20 @@
     #define BOOST_MPL_LIMIT_VECTOR_SIZE <%= ((n + 9) / 10) * 10 %>
 <% end %>
 
-#include <boost/mpl/reverse_fold.hpp>
 #include <boost/mpl/vector.hpp>
+#include <boost/mpl/reverse_fold.hpp>
 namespace mpl = boost::mpl;
 
-
 struct f {
-    template <typename State, typename X>
-    struct apply { using type = X; };
+    template<typename, typename X>
+    struct apply {
+        using type = X;
+    };
 };
 
-struct state { };
+struct state;
 
-template <int i>
-struct x { };
+template<int> struct x;
 
 using vector = mpl::vector<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
