--- a/benchmark/type/transform/meta.list.cpp.erb
+++ b/benchmark/type/transform/meta.list.cpp.erb
@@ -4,20 +4,19 @@
 
 #include <meta/meta.hpp>
 
-struct f
-{
+struct f {
     template<typename X>
     using invoke = X;
 };
 
 template<int> struct x;
 
-using xs = meta::list<
+using list = meta::list<
     <%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>
 >;
 
 #if defined(METABENCH)
-using result = meta::transform<xs, f>;
+using result = meta::transform<list, f>;
 #endif
 
 int main() { }
