--- a/benchmark/type/transform/mpl.vector.cpp.erb
+++ b/benchmark/type/transform/mpl.vector.cpp.erb
@@ -7,21 +7,23 @@
     #define BOOST_MPL_LIMIT_VECTOR_SIZE <%= ((n + 9) / 10) * 10 %>
 <% end %>
 
-#include <boost/mpl/quote.hpp>
-#include <boost/mpl/transform.hpp>
 #include <boost/mpl/vector.hpp>
+#include <boost/mpl/transform.hpp>
 namespace mpl = boost::mpl;
 
+struct f {
+    template<typename X>
+    struct apply {
+        using type = X;
+    };
+};
 
-template <typename X>
-struct f { typedef X type; };
+template<int> struct x;
 
-template <int> struct x;
-
-using xs = mpl::vector<<%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>>;
+using vector = mpl::vector<<%= (1..n).map { |i| "x<#{i}>" }.join(', ') %>>;
 
 #if defined(METABENCH)
-using result = mpl::transform<xs, mpl::quote1<f>>::type;
+using result = mpl::transform<vector, f>::type;
 #endif
 
 int main() { }
