fix Metal benchmarks after recent API-breaking changes

--- a/benchmark/type/at/metal.list.cpp.erb
+++ b/benchmark/type/at/metal.list.cpp.erb
@@ -11,7 +11,7 @@ using list = metal::list<
 >;
 
 #if defined(METABENCH)
-using result = metal::at<list, metal::int_<<%= n - 1 %>>>;
+using result = metal::at<list, metal::number<<%= n - 1 %>>>;
 #endif
 
 int main() { }
