--- a/benchmark/type/fold_right/metal.list.cpp.erb
+++ b/benchmark/type/fold_right/metal.list.cpp.erb
@@ -16,9 +16,7 @@ using list = metal::list<
 >;
 
 #if defined(METABENCH)
-using result = metal::fold<
-    list, state, metal::lambda<f>, metal::size_t<<%= n %>>, metal::size_t<0>
->;
+using result = metal::fold_right<list, state, metal::lambda<f>>;
 #endif
 
 int main() { }
