--- a/benchmark/hetero/at/fusion.list.cpp.erb
+++ b/benchmark/hetero/at/fusion.list.cpp.erb
@@ -14,8 +14,10 @@ int main() {
         <%= ((k*n+1)..(k*n+n)).map { |n| "x<#{n}>()" }.join(', ') %>
     );
 
-#if defined(METABENCH)
-    fusion::at_c<<%= n - 1 %>>(<%= "xs#{k}" %>);
-#endif
+    <% (env[:p]*n/100).times do |p| %>
+    #if defined(METABENCH)
+        fusion::at_c<<%= p*100/env[:p] %>>(<%= "xs#{k}" %>);
+    #endif
+    <% end %>
 <% end %>
 }
