--- a/benchmark/hetero/at/hana.basic_tuple.cpp.erb
+++ b/benchmark/hetero/at/hana.basic_tuple.cpp.erb
@@ -13,8 +13,10 @@ int main() {
         <%= ((k*n+1)..(k*n+n)).map { |n| "x<#{n}>{}" }.join(', ') %>
     );
 
-#if defined(METABENCH)
-    constexpr auto <%= "result#{k}" %> = hana::get_impl<<%= n - 1 %>>(<%= "xs#{k}" %>);
-#endif
+    <% (env[:p]*n/100).times do |p| %>
+    #if defined(METABENCH)
+        constexpr auto <%= "result#{p}#{k}" %> = hana::get_impl<<%= p*100/env[:p] %>>(<%= "xs#{k}" %>);
+    #endif
+    <% end %>
 <% end %>
 }
