--- a/benchmark/hetero/at_key/hana.map.cpp.erb
+++ b/benchmark/hetero/at_key/hana.map.cpp.erb
@@ -43,8 +43,10 @@ int main() {
         ((k*n+1)..(k*n+n)).map { |i| "light_pair<hana::int_<#{i}>, undefined>{}" }.join(', ')
     %>);
 
-#if defined(METABENCH)
-    constexpr auto <%= "result#{k}" %> = hana::at_key(<%= "xs#{k}" %>, hana::int_<<%= (k*n+n) %>>{});
-#endif
+    <% (env[:p]*n/100).times do |p| %>
+    #if defined(METABENCH)
+        constexpr auto <%= "result#{p}#{k}" %> = hana::at_key(<%= "xs#{k}" %>, hana::int_<<%= k*n+p*100/env[:p]+1 %>>{});
+    #endif
+    <% end %>
 <% end %>
 }
