--- a/benchmark/hetero/at/hana.basic_tuple.cpp.erb
+++ b/benchmark/hetero/at/hana.basic_tuple.cpp.erb
@@ -1,4 +1,4 @@
-// Copyright Louis Dionne 2013-2016
+// Copyright Louis Dionne 2013-2017
 // Distributed under the Boost Software License, Version 1.0.
 // (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
@@ -15,7 +15,7 @@ int main() {
 
     <% (env[:p]*n/100).times do |p| %>
     #if defined(METABENCH)
-        constexpr auto <%= "result#{p}#{k}" %> = hana::get_impl<<%= p*100/env[:p] %>>(<%= "xs#{k}" %>);
+        constexpr auto <%= "result#{p}#{k}" %> = hana::at_c<<%= p*100/env[:p] %>>(<%= "xs#{k}" %>);
     #endif
     <% end %>
 <% end %>
