--- a/benchmark/type/all/kvasir.list.cpp.erb
+++ b/benchmark/type/all/kvasir.list.cpp.erb
@@ -2,9 +2,9 @@
 // Distributed under the Boost Software License, Version 1.0.
 // (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
-#include <mpl.hpp>
- 
-using namespace kvasir;
+#include <kvasir/mpl/mpl.hpp>
+namespace mpl = kvasir::mpl;
+
 template<typename N>
 using is_positive = mpl::int_<(N::value > 0)>;
 
